--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -5,6 +5,7 @@ upstream php-upstream {
 server {
     root /var/www/app/web;
     listen 80;
+    server_tokens off;
 
     location / {
         try_files $uri @rewriteapp;
