--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   php:
     build: ./docker/php/
+    environment:
+      TIMEZONE: Europe/Paris
     volumes:
       - ./docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini:ro
       - ./app:/var/www/app
