--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     build: ./docker/php/
     environment:
       TIMEZONE: Europe/Paris
+      XDEBUG_REMOTE_HOST: 10.200.10.1
     volumes:
       - ./docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini:ro
+      - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini:ro
       - ./app:/var/www/app
     working_dir: /var/www/app
 
