--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   php:
     build: ./docker/php/
+    depends_on:
+      - mysql
     environment:
       TIMEZONE: Europe/Paris
       XDEBUG_REMOTE_HOST: 10.200.10.1
@@ -23,3 +25,13 @@ services:
       - ./docker/nginx/app.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - 80:80
+
+  mysql:
+    image: mysql:5.6
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password_test
+      MYSQL_DATABASE: db_test
+      MYSQL_USER: user_test
+      MYSQL_PASSWORD: password_test
+    ports:
+      - "3306:3306"
