Make use of the EncoderAwareInterface interface
Encoders are now centralized at the same place

--- a/app/app/config/services.yml
+++ b/app/app/config/services.yml
@@ -4,13 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-    old_password_encoder:
-        class: Symfony\Component\Security\Core\Encoder\MessageDigestPasswordEncoder
-        arguments: ["md5", false, 1]
-
     password_migration_authenticator:
         class:     AppBundle\Security\PasswordMigrationAuthenticator
         arguments:
-            - "@security.password_encoder"
-            - "@old_password_encoder"
+            - "@security.encoder_factory"
             - "@doctrine.orm.entity_manager"
