--- a/app/app/config/security.yml
+++ b/app/app/config/security.yml
@@ -4,6 +4,10 @@ security:
     encoders:
         AppBundle\Entity\User:
             algorithm: bcrypt
+        legacy_encoder:
+            algorithm:        md5
+            encode_as_base64: false
+            iterations:       1
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
