--- a/app/app/config/security.yml
+++ b/app/app/config/security.yml
@@ -1,6 +1,7 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/security.html
 security:
+    erase_credentials: false
     encoders:
         AppBundle\Entity\User:
             algorithm: bcrypt
@@ -25,10 +26,10 @@ security:
         main:
             anonymous: ~
             provider: our_db_provider
-            simple_form:
+            form_login:
                 login_path: login
                 check_path: login
-                authenticator: password_migration_authenticator
+                # authenticator: password_migration_authenticator
             logout:
                 path:   /logout
                 target: /
