--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       TIMEZONE: Europe/Paris
       XDEBUG_REMOTE_HOST: 10.200.10.1
+      COMPOSER_ALLOW_SUPERUSER: 1
     volumes:
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini:ro
       - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini:ro
