--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -21,9 +21,11 @@ RUN pecl install mongodb \
 RUN apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
+        libmcrypt-dev \
         libpng12-dev \
-    && docker-php-ext-install gd \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+    && docker-php-ext-install -j$(nproc) iconv mcrypt \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd
 
 RUN docker-php-ext-install pdo_mysql
 
